# pre-commit-jgstew

./: .editorconfig  .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml  zizmor.yaml
.github/workflows/: black.yaml  flake8.yaml  isort.yaml  misspell.yaml  pre-commit.yaml  tag_and_release.yaml  test_build.yaml  yamllint.yaml
pre_commit_hooks/: __init__.py  add_main_docstring.py  autopkg_processor_check_conventions.py  autopkg_recipe_check_conventions.py  bigfix_bes_check_conventions.py  fix_files_to_ascii.py  git_clean.py  github_action_set_output_fix.py  minimum_changes.py  regex_search_filter_replace.py  revert_missing_change.py  shared_utils.py  validate_bes.py  validate_plist.py  verify_files_are_ascii.py  verify_files_contain_entry.py  verify_files_contain_pattern.py
pre_commit_jgstew/: __init__.py  add_main_docstring.py  autopkg_processor_check_conventions.py  autopkg_recipe_check_conventions.py  fix_files_to_ascii.py  git_clean.py  github_action_set_output_fix.py  regex_search_filter_replace.py  shared_utils.py  validate_bes.py  validate_plist.py  verify_files_are_ascii.py  verify_files_contain_entry.py
test/: example-test.bes  example.test_file
tests/: conftest.py  test_add_main_docstring.py  test_autopkg_processor_check_conventions.py  test_autopkg_recipe_check_conventions.py  test_bigfix_bes_check_conventions.py  test_fix_files_to_ascii.py  test_git_clean.py  test_github_action_set_output_fix.py  test_minimum_changes.py  test_package_rename.py  test_packaging_metadata.py  test_regex_search_filter_replace.py  test_revert_missing_change.py  test_setup_version.py  test_shared_utils.py  test_validate_bes.py  test_validate_plist.py  test_verify_files_are_ascii.py  test_verify_files_contain_entry.py  test_verify_files_contain_pattern.py
tests/examples/: example-test.bes  example.test_file  nested-sample.plist
