[metadata]
name = pre-commit-hooks
version = attr: pre_commit_hooks.__version__
author = JGStew
author_email = noreply@jgstew.com
description = custom Python based pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgstew/pre-commit-jgstew
project_urls =
    Bug Tracker = https://github.com/jgstew/pre-commit-jgstew/issues
    Source = https://github.com/jgstew/pre-commit-jgstew
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = .
packages = pre_commit_hooks
python_requires = >=3.5
install_requires =
    validate_bes_xml
    python-Levenshtein
    thefuzz

[options.entry_points]
console_scripts =
    minimum-changes = pre_commit_hooks.minimum_changes:main
    validate-bes = pre_commit_hooks.validate_bes:main
    verify-files-contain-entry = pre_commit_hooks.verify_files_contain_entry:main
    verify-files-contain-pattern = pre_commit_hooks.verify_files_contain_pattern:main
    verify-files-are-ascii = pre_commit_hooks.verify_files_are_ascii:main
    git-clean = pre_commit_hooks.git_clean:main
    regex-search-filter-replace = pre_commit_hooks.regex_search_filter_replace:main
