[metadata]
name = pre-commit-jgstew
version = attr: pre_commit_jgstew.__version__
author = JGStew
author_email = noreply@jgstew.com
description = custom Python based pre-commit hooks
keywords = pre-commit hooks python jgstew
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgstew/pre-commit-jgstew
project_urls =
    Bug Tracker = https://github.com/jgstew/pre-commit-jgstew/issues
    Source = https://github.com/jgstew/pre-commit-jgstew
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = pre_commit_jgstew
python_requires = >=3.5
install_requires =
    validate_bes_xml
    importlib-metadata
    setuptools
    validate-plist-xml
    PyYAML
    anyascii

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    minimum-changes = pre_commit_jgstew.minimum_changes:main
    validate-bes = pre_commit_jgstew.validate_bes:main
    verify-files-contain-entry = pre_commit_jgstew.verify_files_contain_entry:main
    verify-files-contain-pattern = pre_commit_jgstew.verify_files_contain_pattern:main
    verify-files-are-ascii = pre_commit_jgstew.verify_files_are_ascii:main
    fix-files-to-ascii = pre_commit_jgstew.fix_files_to_ascii:main
    git-clean = pre_commit_jgstew.git_clean:main
    regex-search-filter-replace = pre_commit_jgstew.regex_search_filter_replace:main
    revert-missing-change = pre_commit_jgstew.revert_missing_change:main
    validate-plist = pre_commit_jgstew.validate_plist:main
    github-action-set-output-fix = pre_commit_jgstew.github_action_set_output_fix:main
    add-missing-docstrings = pre_commit_jgstew.add_main_docstring:main
    check-processor-conventions = pre_commit_jgstew.autopkg_processor_check_conventions:main
    check-recipe-conventions = pre_commit_jgstew.autopkg_recipe_check_conventions:main
    check-bes-conventions = pre_commit_jgstew.bigfix_bes_check_conventions:main
